--- a/pastaManager/pom.xml
+++ b/pastaManager/pom.xml
@@ -26,6 +26,11 @@
             <artifactId>gson</artifactId>
             <version>1.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.zenjava</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>8.8.3</version>
+        </dependency>
     </dependencies>
 
 
