--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-.idea
-*.xml
-javafxtest.iml
+out/production/javafxtest/META-INF/
